# Stock-Trading-Agent

./: .env.example  .gitignore  ATTENTION.md  LICENSE  Makefile  README.md  daily_news_prompt.md  daily_news_prompt_short_term.md  daily_prompt.md  daily_prompt_short_term.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  weekly_research_prompt.md  weekly_research_prompt_short_term.md
.claude/: settings.local.json
.git-sync-queue/: .gitkeep
chroma_data/: chroma.sqlite3
docs/: architecture.md  backtesting.md  commands.md  configuration.md  safety.md  strategies.md
quant_trading_system/: __init__.py  _strategy_helpers.py  _structlog_shim.py  agent_tools.py  cli.py  config.py  git_sync.py  health.py  journal.py  llm_factory.py  logging_config.py  memory.py  news_service.py  options.py  orchestrator.py  strategy_backtest.py  strategy_evaluation.py  strategy_runtime.py  tool_registry.py  universe.py
reports/: covered_call_wheel_report.html  equity_breakout_volume_confirmation_report.html  equity_momentum_macd_histogram_report.html  equity_opening_range_breakout_report.html  equity_rsi_divergence_report.html
runs/: 2026-05-07-1532-dce41b05.json
scripts/: com.harness.gitlock.plist  com.harness.gitrunner.plist  install_git_safety.sh  preflight.py  process_git_sync_queue.sh
tests/: conftest.py  test_backtester.py  test_config.py  test_dry_run.py  test_end_to_end.py  test_knowledge_base.py  test_options_backtester.py  test_provisional_claims.py  test_risk_manager.py  test_safety_gate.py
trades/: 2026-05.jsonl  2026-06.jsonl  2026-07.jsonl
(+1466 files in other folders)
