[project]
name = "quant-trading-system"
version = "0.1.0"
description = "Autonomous multi-agent quantitative trading system powered by Claude"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
dependencies = [
    "langgraph>=0.2,<1.0",
    "langgraph-checkpoint-postgres>=2.0",
    "langchain-anthropic>=0.3",
    "langchain-ollama>=0.3",
    "langchain-core>=0.3",
    "alpaca-py>=0.30",
    "yfinance>=0.2",
    "chromadb>=0.5",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
    "apscheduler>=3.10,<4.0",
    "quantstats>=0.0.62",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.1",
    "pandas-ta",
    "vectorbt>=0.26",
    "python-frontmatter>=1.0",
    "exchange-calendars>=4.5",
    "QuantLib>=1.33",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
]

[project.optional-dependencies]
native = [
    "TA-Lib>=0.4.28",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.scripts]
trading-system = "main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
